# Wasmcloud-tcp-udp-stream-listen-provider

./: .gitignore  .gitmodules  ARCHITECTURE.md  Agents.md  CHANGELOG.md  CONFIG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  STRUCTURE.md  TECHNICAL.md  TESTING.md  build-all.sh  build-component.sh  build-provider.sh  build-test-server.sh  demo.sh  local.wadm.yaml  wadm.yaml  wasmcloud.toml  wasmcloud.yaml
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
.wash/: config.yaml
component/: Cargo.toml  README.md  wasmcloud.toml
component/.wash/: config.yaml
component/src/: lib.rs
component/wit/: deps.toml  messaging.wit  world.wit
examples/: README.md  basic_usage.rs  custom-ports.md  tcp-only.md  udp-only.md
provider/: Cargo.toml
provider/src/: connection.rs  handler.rs  lib.rs  main.rs  nats.rs
provider/tests/: integration_tests.rs
src/: config.rs  connection.rs  lib.rs  main.rs  nats.rs  provider.rs  stream.rs
test-server/: Cargo.toml
test-server/src/: main.rs
tests/: README.md  integration_test.rs  integration_tests.rs  run_integration_test.sh  tcp_udp_server.py
wadm/: example-app.yaml
wasmcloud-example/: Makefile  README.md  test-local.sh  wadm.yaml
wit/: messaging.wit  provider.wit  world.wit
