[workspace]
members = ["provider"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["64BitAsura"]
license = "Apache-2.0"
repository = "https://github.com/64BitAsura/Wasmcloud-tcp-udp-stream-listen-provider"

[workspace.dependencies]
wasmcloud-provider-sdk = "0.10"
tokio = { version = "1.43", features = ["full"] }
async-nats = "0.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
futures = "0.3"
chrono = "0.4"
