[package]
name = "wasmcloud-provider-messaging-tcp-udp-stream"
version = "0.1.0"
edition = "2021"
description = """
A wasmCloud capability provider that satisfies the 'wasmcloud:messaging' contract
by acting as a unidirectional TCP/UDP ASCII message stream client (receives messages
from a remote TCP/UDP server) and forwards them to wasmCloud components via the NATS mesh.
"""
authors = ["64BitAsura"]
license = "Apache-2.0"
repository = "https://github.com/64BitAsura/Wasmcloud-tcp-udp-stream-listen-provider"

[workspace]

[badges.maintenance]
status = "actively-developed"

[dependencies]
anyhow = "1"
bytes = "1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
wasmcloud-provider-sdk = "0.13.0"
wit-bindgen-wrpc = "0.9.0"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = "z"
lto = true
strip = true

[[bin]]
name = "tcp-udp-stream-provider"
path = "src/main.rs"
