[package]
name = "tcp-udp-stream-provider"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
wasmcloud-provider-sdk.workspace = true
tokio.workspace = true
async-nats.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
futures.workspace = true
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tokio-test = "0.4"
